--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Electron Starter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Completed Games Tracker</title>
   </head>
-  <body>
-    <h1>Hello from clean Electron</h1>
-    <p>No frameworks, no bullshit.</p>
+  <body class="bg-gray-950 text-gray-200">
+    <div id="root"></div>
+    <script type="module" src="/main.tsx"></script>
   </body>
 </html>
